--- a/data_processor.ipynb
+++ b/data_processor.ipynb
@@ -14151,17 +14151,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
+   "outputs": [],
    "source": [
-    "```python\n",
-    "import json\n",
-    "\n",
-    "with open('dataset.json', 'w') as fd:\n",
-    "    json.dump(dataset, fd, indent=4)\n",
-    "```"
+    "df.to_hdf('./pfx_data.hdf', 'table', mode='w', table=True)"
    ]
   },
   {
