--- a/cori-17mar17.ipynb
+++ b/cori-17mar17.ipynb
@@ -135,7 +135,7 @@
    "source": [
     "dataset = []\n",
     "\n",
-    "with tarfile.open('pfx_data.tar.bz2', mode='r:bz2') as arxiv:\n",
+    "with tarfile.open('cori-17mar17.tar.bz2', mode='r:bz2') as arxiv:\n",
     "    for i in arxiv.getnames():\n",
     "        if i.endswith('.txt'):\n",
     "            n_nodes = int(i.split('.')[0])\n",
@@ -14140,25 +14140,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Miscellaneous"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Save Dataset to disk"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "df.to_hdf('./pfx_data.hdf', 'table', mode='w', table=True)"
+    "# Miscellaneous\n",
+    "\n",
+    "### Save Dataset to disk\n",
+    "\n",
+    "```python\n",
+    "df.to_hdf('./pfx_data.hdf', 'table', mode='w', table=True)\n",
+    "```"
    ]
   },
   {
